# email-classifier

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  backup.py  bigllm.py  celery_tasks.py  llm.py  main.py  pyproject.toml  request.py  requirements.txt  temp.py  ui.py
.github/workflows/: update-visits.yml
ML/: app.py  bigapp.py  decrypt.py  install.sh  llm.py  mail_fetching.py  rag3.csv  request.py  requirements.txt  translator.py  tree.py
client/: package-lock.json  package.json
client/src/pages/: App.jsx  index.js
data/: department-buckets.json  employee_map.json  rag.json  rag2.json  rag_new.json
docs/: mailbox.md
final/: main.py
final/lib/: forward.py
hackathon/ML/: backup.py  requirements.txt
hackathon/client/: package-lock.json  package.json
hackathon/server/: main.py
hackathon/server/data/: bigrag.json  heirarchy.json
hackathon/server/lib/: attachment.py  summarize.py
mail/: forward.py  install.sh  llm.py  mail_info.py  mails.py  setup.sh
mail/lib/: info.py  listen.py
mail/maillib/: forward.py  info.py
resources/spam-email-classifier/: .gitignore  readme.md
server/: .env.tmpl  Dockerfile  package.json  server.py  setup.sh
server-2/: heirarchy.json  main.py  tasks.py
server-2/lib/: forward.py  summarize.py
server/lib/: forward.py  info.py  listen.py  spam_filter.py
server/src/: ui.py
spam-detection/: README.md
src/: app.py  llm.py
src/data/: rag.json
src/lib/: celery.py  forward.py
testing/datasets/: Test - Email Classification.csv
testing/mail/: mails.py
testing/server/: server.py
(+6 files in other folders)
