[tool.poetry]
name = "email-classifier"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Shantanu Wable <shantanuwable2003@gmail.com>", "Anish Pawar <anishpurupawar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
matplotlib = "^3.9.2"
pydantic = "^2.10.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
transformers = "^4.46.3"
ollama = "^0.3.3"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
celery = "^5.4.0"
cryptography = "^43.0.3"
pypdf2 = "^3.0.1"
streamlit = "^1.40.1"
haystack-ai = "^2.7.0"
ollama-haystack = "^1.1.0"
faker = "^33.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
